--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	This should be some cool stuff heheheheh
+	<a href="JavascriptCompition/main.html">Enter</a>
 </body>
 
 </html>
