added the fisrt version of the game

--- a/JavascriptCompition/main.html
+++ b/JavascriptCompition/main.html
@@ -3,6 +3,9 @@
 <head>
 	<link href="style.css" rel="stylesheet">
 	<script defer src="main.js"></script>
+	<script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+	<script language="javascript" type="text/javascript" src="theLoop.js"></script>
+
 	<title>Epic</title>
 </head>
 
@@ -10,4 +13,7 @@
 	<div class="titleCard">
 		<img src="titleCard.png" alt="The Loop (Title image)">
 	</div>
+	<br>
+	<br>
+	<br>
 </body>
