--- a/JavascriptCompition/main.html
+++ b/JavascriptCompition/main.html
@@ -2,11 +2,8 @@
 
 <head>
 	<link href="style.css" rel="stylesheet">
-	<script defer src="main.js"></script>
 	<script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-	<script language="javascript" type="text/javascript" src="theLoop.js"></script>
-
-	<title>Epic</title>
+	<title>The Loop</title>
 </head>
 
 <body background="background.png">
@@ -16,4 +13,10 @@
 	<br>
 	<br>
 	<br>
+	<div class="game">
+		<script language="javascript" type="text/javascript" src="theLoop.js"> </script>
+	</div>
+	<div class="score">
+		<p id=scoreText>Score: 0</p>
+	</div>
 </body>
