Highscores and tidy up

--- a/JavascriptCompition/main.html
+++ b/JavascriptCompition/main.html
@@ -19,4 +19,7 @@
 	<div class="score">
 		<p id=scoreText>Score: 0</p>
 	</div>
+	<div class="highScore">
+		<p id=highScoreText>High Score: 0</p>
+	</div>
 </body>
