--- a/theLoop/main.html
+++ b/theLoop/main.html
@@ -3,19 +3,17 @@
 <head>
 	<link href="style.css" rel="stylesheet">
 	<script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+	<script language="javascript" type="text/javascript" src="theLoop.js"> </script>
 	<title>The Loop</title>
 </head>
 
-<body background="background.png">
+<body>
 	<div class="titleCard">
-		<img src="titleCard.png" alt="The Loop (Title image)">
+		<img id="titleCard" src="titleCard.png" alt="The Loop (Title image)">
 	</div>
 	<br>
 	<br>
 	<br>
-	<div class="game">
-		<script language="javascript" type="text/javascript" src="theLoop.js"> </script>
-	</div>
 	<div class="score">
 		<p id=scoreText>Score: 0</p>
 	</div>
