--- a/theLoop/main.html
+++ b/theLoop/main.html
@@ -14,10 +14,29 @@
 	<br>
 	<br>
 	<br>
-	<div class="score">
-		<p id=scoreText>Score: 0</p>
+	<div id="game" class="game">
+		<div class="score">
+			<p id=scoreText>Score: 0</p>
+		</div>
+		<div class="highScore">
+			<p id=highScoreText>High Score: 0</p>
+		</div>
 	</div>
-	<div class="highScore">
-		<p id=highScoreText>High Score: 0</p>
-	</div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	shhh no peeking
 </body>
