--- a/theLoop/index.html
+++ b/theLoop/index.html
@@ -39,6 +39,12 @@
 	<br>
 	<br>
 	<br>
+	<!-- <br>
+	<p id="lb0"> Name: Score </p>
+	<p id="lb1"> Name: Score </p>
+	<p id="lb2"> Name: Score </p>
+	<p id="lb3"> Name: Score </p>
+	<p id="lb4"> Name: Score </p>
 	<br>
 	<br>
 	<br>
@@ -46,5 +52,13 @@
 	<br>
 	<br>
 	<br>
-	press B for a hidden mode :)
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br> -->
+	Game looks wrong? Try zooming out or playing in landscape.
 </body>
