--- a/countDown/index.html
+++ b/countDown/index.html
@@ -6,7 +6,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script language="javascript" type="text/javascript" src="main.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-	<title></title>
+	<title>Counting Down</title>
+	<style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+  </style>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
