--- a/snowman/index.html
+++ b/snowman/index.html
@@ -11,7 +11,7 @@
             overflow: hidden;
         }
     </style>
-    <title>CA Test</title>
+    <title>Snowman Builder</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"
         integrity="sha512-rCZdHNB0AePry6kAnKAVFMRfWPmUXSo+/vlGtrOUvhsxD0Punm/xWbEh+8vppPIOzKB9xnk42yCRZ5MD/jvvjQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
