maybe this is better
please

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,4 +1,13 @@
-this is so scuffed
-<br>
-
-<a href="nyancatexplorationpatch1.zip" download="nyancatexplorationpatch1">nyancat exploration modpack patch 1</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doge Downloads</title>
+</head>
+<body>
+    this is so scuffed
+    <br>
+    <a href="nyancatexplorationpatch1.zip" download="nyancatexplorationpatch1">nyancat exploration modpack patch 1</a>
+</body>
+</html>
