--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script language="javascript" type="text/javascript" src="particle.js"></script>
 		<script language="javascript" type="text/javascript" src="main.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 		<title></title>
@@ -10,7 +11,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet" />
 
-		<title>Doge's site of things</title>
+		<title>HELLO!!!</title>
 	</head>
 
 	<body>
