new website design

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-		<script language="javascript" type="text/javascript" src="particle.js"></script>
-		<script language="javascript" type="text/javascript" src="main.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-		<title></title>
+
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet" />
@@ -15,6 +13,32 @@
 	</head>
 
 	<body>
-		This is a test
+		<img src="data/dogeiegif.gif" alt="introductory gif with doge and hatsune miku">
+		<p>
+			i bought this domain on a whim lol
+		</p>
+		<p>
+			i use it mainly for infinite email addresses
+		</p>
+		<p>
+			check out some small projects i've done
+		</p>
+		<p>
+			<a href="/theLoop/index.html">the loop (fun!)</a> <br>
+			<a href="/snowman/index.html">snowman</a> <br>
+			<a href="/glitter/index.html">glitter</a> <br>
+			<a href="https://dogemastr.itch.io/">my itch io page (mostly game jam projects)</a> <br>
+		</p>
+
+		<p>im good at web design dont look to much into it</p>
+		<img src="https://cyber.dabamos.de/88x31/abcgiant.gif">
+
+		<p>
+			cool people ↓ ↓ ↓ ↓
+		</p>
+		<a href="https://starfallsapphic.gay/">real saturday tasogare</a> <br>
+		<a href="https://hellnet.work/"> <img src="	https://hellnet.work/8831/img/hellnet_8831.gif" alt="hellnet.work's own 88x31 button"
+				title="hellnet.work 88x31 button" height="31" width="88"> </a> 
+		<a rel="noreferrer" href="https://maia.crimew.gay" target="_blank"><img src="https://maia.crimew.gay/badges/maia.crimew.gay.png" alt="maia crimew" title="my site :3"></a> 
 	</body>
 </html>
