old page added back

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			i bought this domain on a whim lol
 		</p>
 		<p>
-			i use it mainly for infinite email addresses
+			i use it mainly for infinite email addresses (i will recieve <a href="mailto:anything@doge.ie">anything@doge.ie</a> )
 		</p>
 		<p>
 			check out some small projects i've done
@@ -27,6 +27,7 @@
 			<a href="/theLoop/index.html">the loop (fun!)</a> <br>
 			<a href="/snowman/index.html">snowman</a> <br>
 			<a href="/glitter/index.html">glitter</a> <br>
+			<a href="/oldfrontpage/index.html">old doge.ie</a> <br> <br>
 			<a href="https://dogemastr.itch.io/">my itch io page (mostly game jam projects)</a> <br>
 		</p>
 
