--- a/oldfrontpage/index.html
+++ b/oldfrontpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>glitter</title>
+		<title>old doge.ie</title>
 
 		<style>
 			html,
@@ -16,8 +16,7 @@
 			integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g=="
 			crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-		<script src="Glitter.js"></script>
-		<script src="sketch.js"></script>
+		<script src="main.js"></script>
 	</head>
 	<body></body>
 </html>
